fixed overflow with larger screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -68,10 +68,12 @@ svg {
   text-align: center;
 }
 
-.container {
-  width: 1024px;
-}
-
 .large-icon {
   font-size: 2rem;
+}
+
+@media (min-width: 1025px) {
+  .container {
+    width: 1024px;
+  }
 }
